FIX(`api`) : Test Method Error 발생 원인 해결
- `throwException_Include_Invalid_Id()` 메서드 내에서 given 값인 `invalidUserIds` 값을 `Arrays.asList()`로 변경
  - `List.of()`의 경우, `.contains(null)` 연산 시에 NPE 발생
  - null에 대한 연산이 불가능합니다.